Functional app but still needs a lot of styling and more questions.

--- a/index.html
+++ b/index.html
@@ -11,20 +11,10 @@
     <body>
         <main>
             <header>
-                <div>View high scores</div>
-                <div>Time: 0</div>
+                <div id="high-score">View high scores</div>
+                <div id="time">Time: 0</div>
             </header>
-            <div id="quiz-app">
-                <div id="question">
-                    Coding Quiz Challenge 
-                </div>
-                <div id="answers">
-                    Try to answer the following code-related questions within the time limit.
-                    Keep in mind that incorrect answers will penalize your score/time by ten seconds!
-                </div>
-                <button id="start">Start Quiz</button>
-                <div id="result"> Correct! </div>
-            </div>
+            <div id="quiz-app"></div>
         </main>
         <script src="./assets/js/script.js"></script>
     </body>
